--- a/responsive_design/04-index.html
+++ b/responsive_design/04-index.html
@@ -21,6 +21,9 @@
 						<img src="images/logo-white.png" alt="Techium logo" width="160" height="40">
 					</a>
 				</div>
+				<input class="menu-btn" type="checkbox" id="menu-btn" />
+				<label class="menu-icon" for="menu-btn"><span class="navicon"></span>
+				</label>
 				<nav class="navbar-menu">
 					<ul class="nav">
 						<li class="nav-item">
@@ -251,14 +254,10 @@ pic-article-02_uitvrw_c_scale,w_1200.jpg 1200w" src="pic-article-02_uitvrw_c_sca
 						<li class="col-1-3">
 							<article class="card-blog">
 								<div>
-									<img
-sizes="(max-width: 3000px) 40vw, 1200px"
-srcset="
+									<img sizes="(max-width: 3000px) 40vw, 1200px" srcset="
 pic-article-03_i8jqar_c_scale,w_380.jpg 380w,
 pic-article-03_i8jqar_c_scale,w_953.jpg 953w,
-pic-article-03_i8jqar_c_scale,w_1200.jpg 1200w"
-src="pic-article-03_i8jqar_c_scale,w_1200.jpg"
-alt="">
+pic-article-03_i8jqar_c_scale,w_1200.jpg 1200w" src="pic-article-03_i8jqar_c_scale,w_1200.jpg" alt="">
 								</div>
 								<p class="card-category">Social</p>
 								<h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
