--- a/accessibility/fix-a11y/08-index.html
+++ b/accessibility/fix-a11y/08-index.html
@@ -6,7 +6,7 @@
     <title>Homepage - A fake website</title>
   </head>
   <body>
-    <div class="header">
+    <div class="header"><h1>Homepage</h1>
       <div>
         <div>
           <div><a href="#"><img src="img/logo.png" alt="Name of the logo"></a></div>
