--- a/JQuery_advanced/6-index.html
+++ b/JQuery_advanced/6-index.html
@@ -37,7 +37,7 @@
 
 		function addNewMember(firstName, lastName, position) {
 			const row = $('<tr></tr>')
-			const firstNameCell = $("<td></<td>").text(firstName);
+			const firstNameCell = $("<td></td>").text(firstName);
 			const lastNameCell = $("<td></td>").text(lastName);
 			const deleteCell = $('<td></td>').text('(x)').addClass('delete_cell');
 
@@ -56,7 +56,7 @@
 			const select = $('<select></select>').attr('id', 'position');
 			select.append(
 				$('<option></option>').attr('value', 'before').text('Before'),
-				$('<option></option>').attr('value', 'before').text('After'),
+				$('<option></option>').attr('value', 'after').text('After'),
 			);
 
 			const submitButton = $('<input>').attr({ type: 'submit', value: 'Add Member' });
